# gamebooksolver

./: .gitignore  Cargo.toml  Makefile  buildsol-rust.py  buildsol.py  gamebooksolver.cabal  helper.py  shell.nix  stack-9.2.yaml  stack.yaml
app/: BlogPost.hs  Consoleplay.hs  Genchapters.hs  Main.hs  SolveBook.hs  SolveBook02.hs  Visual.hs
app/LoneWolf/: Book02.hs
data/: 20106S.AK.cbor.json  20106S.CA.cbor.json  20106S.HL.cbor.json  20106S.HU.cbor.json  20106S.MB.cbor.json  20106S.MO.cbor.json  20106S.MS.cbor.json  20106S.SP.cbor.json  20106S.SS.cbor.json  20106S.TR.cbor.json  20106S.cbor.json  2010AK.CA.cbor.json  2010AK.HL.cbor.json  2010AK.HU.cbor.json  2010AK.MB.cbor.json  2010AK.MO.cbor.json  2010AK.MS.cbor.json  2010AK.SP.cbor.json  2010AK.SS.cbor.json  2010AK.TR.cbor.json  2010AK.cbor.json  2010CA.HL.cbor.json  2010CA.HU.cbor.json  2010CA.MB.cbor.json  2010CA.MO.cbor.json  2010CA.MS.cbor.json  2010CA.SP.cbor.json  2010CA.SS.cbor.json  2010CA.TR.cbor.json  2010CA.cbor.json  2010HL.HU.cbor.json  2010HL.MB.cbor.json  2010HL.MO.cbor.json  2010HL.MS.cbor.json  2010HL.SP.cbor.json  2010HL.SS.cbor.json  2010HL.TR.cbor.json  2010HL.cbor.json  2010HU.MB.cbor.json  2010HU.MO.cbor.json  (+418 more)
data/B02/: 2010SW.MO.HU.CA.6S-Sword-BodyArmor.cbor.jot  2010SW.MO.HU.CA.6S-Sword-BodyArmor.cbor.json  2010SW.MO.HU.CA.6S-Sword-BodyArmor.jot  2010SW.MO.HU.CA.6S-Sword-BodyArmor.json  2010SW.MO.HU.CA.6S-Sword-Shield.cbor.dot  2010SW.MO.HU.CA.6S-Sword-Shield.cbor.jot  2010SW.MO.HU.CA.6S-Sword-Shield.cbor.json  2010SW.MO.HU.CA.6S-Sword-Shield.desc  2010SW.MO.HU.CA.6S-Sword-Shield.dot  2010SW.MO.HU.CA.6S-Sword-Shield.jot  2010SW.MO.HU.CA.6S-Sword-Shield.json  2010SW.MO.HU.CA.6Sg10-Sword-BodyArmor.cbor.jot  2010SW.MO.HU.CA.6Sg10-Sword-BodyArmor.cbor.json  2010SW.MO.HU.CA.6Sg10-Sword-BodyArmor.jot  2010SW.MO.HU.CA.6Sg10-Sword-BodyArmor.json  2010SW.MO.HU.CA.6Sg10-Sword-Shield.cbor.dot  2010SW.MO.HU.CA.6Sg10-Sword-Shield.cbor.jot  2010SW.MO.HU.CA.6Sg10-Sword-Shield.cbor.json  2010SW.MO.HU.CA.6Sg10-Sword-Shield.desc  2010SW.MO.HU.CA.6Sg10-Sword-Shield.dot  2010SW.MO.HU.CA.6Sg10-Sword-Shield.jot  2010SW.MO.HU.CA.6Sg10-Sword-Shield.json  2010SW.MO.HU.CA.6Sg11-Sword-Shield.cbor.dot  2010SW.MO.HU.CA.6Sg11-Sword-Shield.cbor.jot  2010SW.MO.HU.CA.6Sg11-Sword-Shield.cbor.json  2010SW.MO.HU.CA.6Sg11-Sword-Shield.desc  2010SW.MO.HU.CA.6Sg11-Sword-Shield.dot  2010SW.MO.HU.CA.6Sg11-Sword-Shield.jot  2010SW.MO.HU.CA.6Sg11-Sword-Shield.json  2010SW.MO.HU.CA.6Sg12-Sword-Shield.cbor.dot  2010SW.MO.HU.CA.6Sg12-Sword-Shield.cbor.jot  2010SW.MO.HU.CA.6Sg12-Sword-Shield.cbor.json  2010SW.MO.HU.CA.6Sg12-Sword-Shield.desc  2010SW.MO.HU.CA.6Sg12-Sword-Shield.dot  2010SW.MO.HU.CA.6Sg12-Sword-Shield.jot  2010SW.MO.HU.CA.6Sg12-Sword-Shield.json  2010SW.MO.HU.CA.6Sg13-Sword-Shield.cbor.dot  2010SW.MO.HU.CA.6Sg13-Sword-Shield.cbor.jot  2010SW.MO.HU.CA.6Sg13-Sword-Shield.cbor.json  2010SW.MO.HU.CA.6Sg13-Sword-Shield.desc  (+2003 more)
data/B03/: 2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal-FLGKnowledge01-Helmet.desc  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal-FLGKnowledge01-Helmet.dot  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal-FLGKnowledge01-Helmet.jot  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal-FLGKnowledge01-Helmet.json  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal-FLGKnowledge01.desc  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal-FLGKnowledge01.dot  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal-FLGKnowledge01.jot  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal-FLGKnowledge01.json  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal-Helmet.desc  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal-Helmet.dot  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal-Helmet.jot  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal-Helmet.json  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal.cbor.dot  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal.cbor.jot  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal.cbor.json  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal.desc  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal.dot  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal.jot  2010SW.HU.CA.6S-Sommerswerd-BodyArmor-Meal-Meal.json  2010SW.HU.CA.6S-Sommerswerd-Laumspur-BodyArmor-FLGKnowledge01-Helmet.desc  2010SW.HU.CA.6S-Sommerswerd-Laumspur-BodyArmor-FLGKnowledge01-Helmet.dot  2010SW.HU.CA.6S-Sommerswerd-Laumspur-BodyArmor-FLGKnowledge01-Helmet.jot  2010SW.HU.CA.6S-Sommerswerd-Laumspur-BodyArmor-FLGKnowledge01-Helmet.json  2010SW.HU.CA.6S-Sommerswerd-Laumspur-BodyArmor-FLGKnowledge01.cbor.jot  2010SW.HU.CA.6S-Sommerswerd-Laumspur-BodyArmor-FLGKnowledge01.cbor.json  2010SW.HU.CA.6S-Sommerswerd-Laumspur-BodyArmor-FLGKnowledge01.desc  2010SW.HU.CA.6S-Sommerswerd-Laumspur-BodyArmor-FLGKnowledge01.dot  2010SW.HU.CA.6S-Sommerswerd-Laumspur-BodyArmor-FLGKnowledge01.jot  2010SW.HU.CA.6S-Sommerswerd-Laumspur-BodyArmor-FLGKnowledge01.json  (+1224 more)
data/B04/: 2010SW.6S.AK.cbor.dot  (+2399 more)
gamebooksolver-base/: Cargo.toml
gamebooksolver-base/src/: lib.rs  lonewolf.rs  solver.rs
gamebooksolver-base/src/lonewolf/: cartwheel.rs  chapter.rs  choices.rs  combat.rs  data.rs  mini.rs  rules.rs  solve.rs
gamebooksolver-base/src/lonewolf/combat/: hits.rs
gamebooksolver-base/src/solver/: base.rs  comparer.rs  rational.rs
gamebooksolver-explorer/: Cargo.toml  compare-decisions.sh  compare-states.sh
gamebooksolver-explorer/src/: chapter.rs  lonewolf.rs  lwexplore.rs  main.rs  mini.rs  solver.rs  types.rs
gamebooksolver-explorer/src/lonewolf/: cartwheel.rs  chapter.rs  choices.rs  combat.rs  data.rs  explore.rs  mini.rs  rules.rs  solve.rs
gamebooksolver-explorer/src/lonewolf/combat/: hits.rs
gamebooksolver-explorer/src/solver/: base.rs
gamebooksolver-wasm/: Cargo.toml
gamebooksolver-wasm/src/: lib.rs
gamebooksolver-webapp/: Cargo.toml  package-lock.json  package.json
json-chapters/: book02.json  book03.json  book04.json  book05.json  display02.json  display03.json  display04.json  display05.json
src/: SimpleSolver.hs  SimpleSolver.lhs  Simplifier.hs  Solver.hs  Solver.lhs  SolverHashable.hs
test/: SimplifierSpec.hs  Spec.hs
workspace_hack/: Cargo.toml
(+3743 files in other folders)
