name:                gamebooksolver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bartavelle/gamebooksolver#readme
license:             BSD3
license-file:        LICENSE
author:              Simon Marechal
maintainer:          bartavelle@gmail.com
copyright:           Simon Marechal
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Solver
                       SimpleSolver
                       LoneWolf.Character
                       LoneWolf.Chapter
                       LoneWolf.Combat
                       LoneWolf.XML
                       LoneWolf.Rules
                       LoneWolf.CombatChart
                       LoneWolf.Choices
                       LoneWolf.Solve
                       LoneWolf.Book02
                       Text.XML.Expat.Lens.Generic
                       LoneWolf.Cartwheel
  ghc-options:         -Wall -funbox-strict-fields -g
  ghc-prof-options:    -auto-all -caf-all
  build-depends:       base >= 4.7 && < 5
                     , data-memocombinators
                     , lens
                     , hexpat
                     , data-default
                     , bytestring
                     , megaparsec
                     , linear
                     , containers
                     , parallel
  default-language:    Haskell2010

executable gamebooksolver-genchapters
  hs-source-dirs:      app
  main-is:             Genchapters.hs
  ghc-options:         -threaded -rtsopts -Wall
  build-depends:       base
                     , gamebooksolver
  default-language:    Haskell2010

executable gamebooksolver-consoleplay
  hs-source-dirs:      app
  main-is:             Consoleplay.hs
  ghc-options:         -threaded -rtsopts -Wall
  buildable:           False
  build-depends:       base
                     , gamebooksolver
                     , lens
                     , containers
                     , random
  default-language:    Haskell2010

executable gamebooksolver-visualization
  hs-source-dirs:      app
  main-is:             Visual.hs
  ghc-options:         -threaded -rtsopts -Wall
  buildable:           True
  build-depends:       base
                     , gamebooksolver
                     , lens
  default-language:    Haskell2010

executable gamebooksolver-solvebook02
  hs-source-dirs:      app
  main-is:             SolveBook02.hs
  ghc-options:         -threaded -rtsopts -Wall -g -with-rtsopts "-M16G -N8"
  build-depends:       base
                     , gamebooksolver
                     , lens
  default-language:    Haskell2010

test-suite gamebooksolver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gamebooksolver
                     , hspec
                     , QuickCheck
                     , lens
  ghc-options:         -threaded -rtsopts -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bartavelle/gamebooksolver
