name:                gamebooksolver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bartavelle/gamebooksolver#readme
license:             BSD3
license-file:        LICENSE
author:              Simon Marechal
maintainer:          bartavelle@gmail.com
copyright:           Simon Marechal
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Solver
                       SolverHashable
                       SimpleSolver
                       Simplifier
                       LoneWolf.Character
                       LoneWolf.Chapter
                       LoneWolf.Combat
                       LoneWolf.Data
                       LoneWolf.XML
                       LoneWolf.XML.Gen
                       LoneWolf.XML.XML03
                       LoneWolf.XML.XML04
                       LoneWolf.XML.XML05
                       LoneWolf.Rules
                       LoneWolf.CombatChart
                       LoneWolf.Choices
                       LoneWolf.Solve
                       LoneWolf.Simplify
                       LoneWolf.Book01
                       LoneWolf.Book02
                       LoneWolf.Book03
                       LoneWolf.Book04
                       LoneWolf.Book05
                       LoneWolf.RawBook.Book01
                       LoneWolf.RawBook.Book03
                       LoneWolf.RawBook.Book04
                       LoneWolf.RawBook.Book05
                       LoneWolf.Various
                       LoneWolf.StateSelector
                       Text.XML.Expat.Lens.Generic
                       LoneWolf.Cartwheel
  ghc-options:         -Wall -funbox-strict-fields -g
  ghc-prof-options:    -auto-all -caf-all
  build-depends:       base >= 4.7 && < 5
                     , data-memocombinators
                     , lens
                     , hexpat
                     , data-default
                     , bytestring
                     , megaparsec
                     , linear
                     , containers
                     , parallel
                     , mtl
                     , superbubbles
                     , ghc-prim
                     , unordered-containers
                     , hashable
                     , deepseq
                     , hashtables
                     , aeson
                     , optparse-applicative
                     , serialise
                     , megaparsec
                     , parser-combinators
                     , text
                     , memoize
  default-language:    Haskell2010

executable gamebooksolver-visualization
  hs-source-dirs:      app
  main-is:             Visual.hs
  ghc-options:         -threaded -rtsopts -Wall
  buildable:           True
  build-depends:       base
                     , gamebooksolver
                     , lens
                     , containers
  default-language:    Haskell2010

executable gamebooksolver-solvebook
  hs-source-dirs:      app
  main-is:             SolveBook.hs
  ghc-options:         -threaded -rtsopts -Wall -g -with-rtsopts "-M16G -N8"
  build-depends:       base
                     , gamebooksolver
                     , directory
                     , lens
                     , containers
                     , unordered-containers
                     , optparse-applicative
                     , aeson
                     , bytestring
                     , serialise
                     , cryptohash-sha256
                     , zstd
                     , vector
  default-language:    Haskell2010

executable gamebooksolver-blogpost
  hs-source-dirs:      app
  main-is:             BlogPost.hs
  ghc-options:         -threaded -rtsopts -Wall
  build-depends:       base
                     , gamebooksolver
                     , aeson
                     , containers
                     , unordered-containers
                     , lucid
                     , directory
                     , lens
                     , text
                     , optparse-applicative
                     , bytestring
  default-language:    Haskell2010

test-suite gamebooksolver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gamebooksolver
                     , hspec
                     , QuickCheck
                     , lens
                     , containers
                     , aeson
  ghc-options:         -threaded -rtsopts -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bartavelle/gamebooksolver
