[package]
name = "gamebooksolver-base"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.5"
num-rational = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
rug = { version = "1", features = ["serde"], optional = true }
bincode = { version = "2", features = ["serde", "derive"] }
serde_with = "3.16"