[package]
name = "gamebooksolver-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
zstd = "0.9"
rug = { version = "1.14", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
minicbor = "0.12"
gamebooksolver-base = { path = "../gamebooksolver-base", features = [ "rug" ] }