[package]
name = "gamebooksolver-explorer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0"
rug = { version = "1", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
gamebooksolver-base = { path = "../gamebooksolver-base", features = [ "rug" ] }
anyhow = "1"
bincode = { version = "2", features = ["serde", "derive"] }
clap = { version = "4.5", features = ["derive"] }
